<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LISPmob root</string>
    <string name="installed">Installed</string>
    <string name="notInstalled">Not Installed</string>
    <string name="NullString"> </string>
    <string name="lispdRunning">lispd is Running</string>
    <string name="showMapCacheString">Show Map Cache</string>
    <string name="showDataCacheString"> Show Data Cache </string>
    <string name="showClearCacheString">Clear Map Cache</string>
    <string name="showLogString">Show lispd logfile</string>
    <string name="lispRunning">LISP is running</string>
    <string name="lispNotRunning">LISP is NOT running</string>
    <string name="noConfFile">No configuration file.\nUse \"Edit LISP Configuration\" section to generate it</string>
    <string name="noRootedString">Not rooted device. Could not start LISPmob</string>
    <string name="askStopServiceString">Stop the LISP service?</string>
    <string name="updateConfTitleString">Current LISP Configuration</string>
    <string name="updateConfString">Edit LISP Configuration</string>
    <string name="updateConfeid4String">EID-IPv4: </string>
    <string name="updateConfeid6String">EID-IPv6: </string>
    <string name="updateConfChgString">Update Configuration</string> 
    <string name="updateConfUpdString">Save Changes</string> 
    <string name="updateConfMRString">Map-Resolver:</string> 
    <string name="updateConfMSString">Map-Server:</string>
    <string name="updateConfMSKeyString">Map-Server Key:</string>
    <string name="or">Or</string> 
    <string-array name="keytypearray">
        <item>Cleartext</item>
        <item>SHA1</item>
    </string-array>
    <string-array name="LogLevelArray">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="ErrMsgArray">
    	<item>No error</item>
        <item>Configuration file not exist.\nUse\"Edit LISP Configuration\"</item>
        <item>Wrong configuration.</item>
        <item>None of the configured interfaces is available. Check your network settings</item>
        <item>Registraion process error. Check:\n  - Configuration\n  - Network connectivity</item>
        <item>Find out NAT process error. Check:\n  - Configuration\n  - Network connectivity</item>
    </string-array>
    
</resources>
