<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:orientation="vertical" 
	android:scrollbars="vertical">
	<LinearLayout 
	    android:id="@+id/updateConfLinearLayout1"
	    android:layout_width="match_parent"  
	    android:orientation="vertical" 
	    android:layout_height="wrap_content"  >
		<TextView 
		    android:id="@+id/updateConfTitleTV" 
		    android:text="@string/updateConfTitleString" 
		    android:layout_width="fill_parent" 
		    android:layout_height="fill_parent" 
		    android:layout_gravity="top" 
		    android:gravity="center_vertical|center_horizontal" 
		    android:textSize="25px">
		</TextView>
    </LinearLayout>
    <ScrollView 
        android:id="@+id/scrollView1"
        android:layout_height="wrap_content" 
        android:layout_width="match_parent">
        <LinearLayout 
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"  
            android:layout_height="match_parent" 
            android:orientation="vertical">
    		<LinearLayout 
    	    	android:id="@+id/updateConfLinearLayout1"
    	    	android:layout_width="match_parent"  
    	    	android:orientation="vertical" 
    	    	android:layout_height="wrap_content"  >
				<TextView 
				    android:id="@+id/updateConfTitleTV1" 
				    android:text="" 
				    android:layout_width="fill_parent" 
				    android:layout_height="fill_parent" 
				    android:layout_gravity="top" 
				    android:gravity="center_vertical|center_horizontal" 
				    android:textSize="25px">
				</TextView>
    		</LinearLayout>
			<TableLayout 
	    		android:id="@+id/updateConftableLayout1"
	    		android:layout_height="wrap_content" 
	    		android:layout_width="match_parent">
        		<TableRow 
            		android:id="@+id/updateConftableRow1" 
            		android:layout_width="wrap_content" 
            		android:layout_height="wrap_content">
					<TextView 
			    		android:id="@+id/updateConfeid4TV" 
			    		android:text="@string/updateConfeid4String" 
			    		android:layout_width="fill_parent" 
			    		android:layout_height="fill_parent" 
			    		android:layout_gravity="top" 
			    		android:gravity="center_vertical|center_horizontal" 
			    		android:textSize="25px" 
			    		android:padding="7dip">
					</TextView>
					<EditText 
			    		android:id="@+id/updateConfeid4Text" 
			    		android:text=""  
			    		android:layout_width="wrap_content" 
			    		android:layout_height="wrap_content" 
			    		android:padding="7dip">
					</EditText>
        		</TableRow>
			</TableLayout>   
    		<LinearLayout 
    		    android:id="@+id/updateConfLinearLayout1"
    		    android:layout_width="match_parent"  
    		    android:orientation="vertical" 
    		    android:layout_height="wrap_content">
				<TextView 
				    android:id="@+id/updateConfTitleTV1" 
				    android:text="@string/or" 
				    android:layout_width="fill_parent" 
				    android:layout_height="fill_parent" 
				    android:layout_gravity="top" 
				    android:gravity="center_vertical|center_horizontal"
				    android:textSize="25px">
				</TextView>
    		</LinearLayout>
			<TableLayout 
			    android:id="@+id/updateConftableLayout2"
			    android:layout_height="wrap_content" 
			    android:layout_width="match_parent"> 
        		<TableRow 
        		    android:id="@+id/updateConftableRow2" 
        		    android:layout_width="wrap_content" 
        		    android:layout_height="wrap_content">
					<TextView 
					    android:id="@+id/updateConfeid6TV"
					    android:text="@string/updateConfeid6String" 
					    android:layout_width="fill_parent" 
					    android:layout_height="fill_parent" 
					    android:layout_gravity="top" 
					    android:gravity="center_vertical|center_horizontal" 
					    android:textSize="25px" 
					    android:padding="7dip"> 
					</TextView>
					<EditText 
					    android:id="@+id/updateConfeid6Text" 
					    android:text=""  
					    android:layout_width="wrap_content" 
					    android:layout_height="wrap_content" 
					    android:padding="7dip">
					</EditText>
        		</TableRow>
			</TableLayout>
			
		    <LinearLayout 
		        android:id="@+id/updateConfLinearLayoutSpinner"
		        android:layout_width="match_parent" 
		        android:orientation="vertical" 
		        android:layout_height="wrap_content">
        		<TextView 
					    android:id="@+id/IfaceNameText"
					    android:text="RLOC Interface:" 
					    android:layout_width="fill_parent" 
					    android:layout_height="fill_parent" 
					    android:layout_gravity="top" 
					    android:gravity="center_vertical|center_horizontal" 
					    android:textSize="25px" 
					    android:padding="7dip"> 
				</TextView>
        		<org.lispmob.root.MultiSelectionSpinner 
        		    android:id="@+id/IfaceNameSpinner"
        		    android:layout_height="wrap_content" 
        		    android:layout_width="match_parent"> 
        		</org.lispmob.root.MultiSelectionSpinner>
    		</LinearLayout>
			
			<LinearLayout 
	    		android:id="@+id/updateConfTable_NAT_Layout" 
	    		android:layout_height="wrap_content" 
	    		android:layout_width="match_parent">
				<CheckBox 
		    		android:text="NAT Traversal Aware" 
		    		android:id="@+id/updateConf_NAT_aware" 
		    		android:layout_height="wrap_content" 
		    		android:layout_width="wrap_content"
				    android:onClick="updateConfNATAwareClicked">
				</CheckBox>
			</LinearLayout>

    		<LinearLayout
    		    android:id="@+id/updateConfLinearLayout2" 
    		    android:layout_width="match_parent" 
    		    android:orientation="vertical" 
    		    android:layout_height="wrap_content"  >
				<TextView 
				    android:id="@+id/updateConfTitleTV2" 
				    android:text="" 
				    android:layout_width="fill_parent" 
				    android:layout_height="fill_parent" 
				    android:layout_gravity="top" 
				    android:gravity="center_vertical|center_horizontal" 
				    android:textSize="25px">
				</TextView>
    		</LinearLayout>
    		
			<TableLayout 
			    android:id="@+id/updateConftableLayout3"
			    android:layout_height="wrap_content" 
			    android:layout_width="match_parent"> 
        		<TableRow 
        		    android:id="@+id/updateConftableRow3"
        		    android:layout_width="wrap_content"
        		    android:layout_height="wrap_content">
						<TextView 
						    android:id="@+id/updateConfMRTV" 
						    android:text="@string/updateConfMRString" 
						    android:layout_width="fill_parent" 
						    android:layout_height="fill_parent" 
						    android:layout_gravity="top" 
						    android:gravity="center_vertical|center_horizontal" 
						    android:textSize="25px" 
						    android:padding="7dip">
						</TextView>
						<EditText 
						    android:id="@+id/updateConfMRText" 
						    android:text=""  
						    android:layout_width="wrap_content" 
						    android:layout_height="wrap_content" 
						    android:padding="7dip">
						</EditText>
        		</TableRow>
			</TableLayout>   

    		<LinearLayout 
    		    android:id="@+id/updateConfLinearLayout3" 
    		    android:layout_width="match_parent" 
    		    android:orientation="vertical" 
    		    android:layout_height="wrap_content"  >
				<TextView 
				    android:id="@+id/updateConfTitleTV3" 
				    android:text="" 
				    android:layout_width="fill_parent" 
				    android:layout_height="fill_parent" 
				    android:layout_gravity="top" 
				    android:gravity="center_vertical|center_horizontal" 
				    android:textSize="25px">
				</TextView>
    		</LinearLayout>

			<TableLayout
			    android:id="@+id/updateConftableLayout4" 
			    android:layout_height="wrap_content" 
			    android:layout_width="match_parent"> 
        		<TableRow 
        		    android:id="@+id/updateConftableRow4" 
        		    android:layout_width="wrap_content" 
        		    android:layout_height="wrap_content">
					<TextView 
					    android:id="@+id/updateConfMSTV" 
					    android:text="@string/updateConfMSString" 
					    android:layout_width="fill_parent" 
					    android:layout_height="fill_parent" 
					    android:layout_gravity="top" 
					    android:gravity="center_vertical|center_horizontal" 
					    android:textSize="25px" 
					    android:padding="7dip">
					</TextView>
					<EditText 
					    android:id="@+id/updateConfMSText" 
					    android:text=""  
					    android:layout_width="wrap_content" 
					    android:layout_height="wrap_content" 
					    android:padding="7dip">
					</EditText>
        		</TableRow>
			</TableLayout>   

    		<LinearLayout 
    		    android:id="@+id/updateConfLinearLayout4"
    		    android:layout_width="match_parent" 
    		    android:orientation="vertical" 
    		    android:layout_height="wrap_content"  >
				<TextView 
				    android:id="@+id/updateConfTitleTV4" 
				    android:text="" 
				    android:layout_width="fill_parent" 
				    android:layout_height="fill_parent" 
				    android:layout_gravity="top" 
				    android:gravity="center_vertical|center_horizontal" 
				    android:textSize="25px">				    
				</TextView>
    		</LinearLayout>
    		
			<TableLayout 
			    android:id="@+id/updateConftableLayout5"
			    android:layout_height="wrap_content" 
			    android:layout_width="match_parent">
		        <TableRow 
		            android:id="@+id/updateConftableRow5" 
		            android:layout_width="wrap_content" 
		            android:layout_height="wrap_content">
					<TextView 
					    android:id="@+id/updateConfMSKeyTV" 
					    android:text="@string/updateConfMSKeyString" 
					    android:layout_width="fill_parent" 
					    android:layout_height="fill_parent" 
					    android:layout_gravity="top" 
					    android:gravity="center_vertical|center_horizontal" 
					    android:textSize="25px" android:padding="7dip">
					</TextView>
					<EditText 
					    android:id="@+id/updateConfMSKeyText" 
					    android:text=""
					    android:inputType="textPassword"
					    android:ellipsize="start"  
					    android:layout_width="wrap_content" 
					    android:layout_height="wrap_content" 
					    android:padding="7dip">
					    
					</EditText>
		        </TableRow>
			</TableLayout>
			
			<LinearLayout 
			    android:id="@+id/updateContProxy_ETR_Layout_data" 
			    android:layout_height="wrap_content" 
			    android:layout_width="match_parent">
				<TextView 
				    android:id="@+id/text_proxy_etr" 
				    android:text="Proxy ETR address:" 
				    android:textSize="25px" 
				    android:layout_height="wrap_content" 
				    android:layout_width="wrap_content">
				</TextView>
				<EditText
				    android:id="@+id/updateConf_proxy_etr" 
				    android:text="" 
				    android:maxLength="39"
				    android:layout_height="wrap_content"  
				    android:layout_width="wrap_content">
				</EditText>
			</LinearLayout>

    		<TableLayout 
    		    android:id="@+id/updateConftableDNSCheckLayout"
    		    android:layout_width="match_parent" 
    		    android:layout_height="wrap_content" >				
        		<TableRow 
        		    android:id="@+id/updateConftableDNSCheckRow"
        		    android:layout_width="wrap_content" 
        		    android:layout_height="wrap_content" >
            		<CheckBox 
            		    android:id="@+id/updateConfDNSCheck" 
            		    android:text="Override DNS" 
            		    android:layout_height="wrap_content" 
            		    android:layout_width="wrap_content" 
            		    android:onClick="updateConfDNSClicked">
            		</CheckBox>
        		</TableRow>
    		</TableLayout>
    		<TableLayout 
    		    android:id="@+id/updateConftableLayout6"
    		    android:layout_height="wrap_content" 
    		    android:layout_width="match_parent"> 
        		<TableRow
        		    android:id="@+id/updateConftableRow6" 
        		    android:layout_width="wrap_content" 
        		    android:layout_height="wrap_content"> 
            		<TextView 
            		    android:id="@+id/updateConfDNS1TV"
            		    android:layout_width="wrap_content" 
            		    android:layout_height="wrap_content" 
            		    android:gravity="center_vertical|center_horizontal" 
            		    android:textSize="25px"  
            		    android:text="Primary DNS:">
            		</TextView>
            		<EditText 
            		    android:id="@+id/updateConfDNS1Text"
            		    android:layout_width="wrap_content" 
            		    android:layout_height="wrap_content"  
            		    android:text="8.8.8.8" 
            		    android:enabled="false">
            		</EditText>
        		</TableRow>
    		</TableLayout>
    		<TableLayout 
    		    android:id="@+id/updateConftableLayout7"
    		    android:layout_width="match_parent" 
    		    android:layout_height="wrap_content">
        		<TableRow 
        		    android:id="@+id/updateConftableRow7"
        		    android:layout_width="wrap_content" 
        		    android:layout_height="wrap_content">
            		<TextView 
            		    android:id="@+id/updateConfDNS2TV" 
            		    android:textSize="25px" 
            		    android:layout_height="wrap_content" 
            		    android:layout_width="wrap_content" 
            		    android:text="Secondary DNS:">
            		</TextView>
            		<EditText 
            		    android:id="@+id/updateConfDNS2Text"
            		    android:layout_height="wrap_content" 
            		    android:text="8.8.4.4" 
            		    android:layout_width="wrap_content" 
            		    android:enabled="false">
            		</EditText>
        		</TableRow>
    		</TableLayout>
    		   		
    		<LinearLayout 
		        android:id="@+id/updateConfLinearLayoutLogSpinner"
		        android:layout_width="match_parent" 
		        android:orientation="vertical" 
		        android:layout_height="wrap_content">
        		<TextView 
					    android:id="@+id/LogLevelText"
					    android:text="Log Level:" 
					    android:layout_width="wrap_content" 
					    android:layout_height="wrap_content" 
					    android:textSize="25px" 
					    android:padding="7dip"> 
				</TextView>
        		<Spinner 
        		    android:id="@+id/LogSpinner"
        		    android:layout_height="wrap_content" 
        		    android:layout_width="wrap_content"
        		    android:layout_alignBaseline="@id/LogLevelText"
                    android:layout_toRightOf="@id/LogLevelText"
                    android:drawSelectorOnTop="true"> 
        		</Spinner>
    		</LinearLayout>

			<TableLayout 
			    android:layout_height="wrap_content" 
			    android:layout_width="match_parent" 
			    android:id="@+id/updateConftableLayout2">
        		<TableRow 
        		    android:id="@+id/updateConftableRow2" 
        		    android:layout_width="wrap_content" 
        		    android:layout_height="wrap_content">
            		<Button 
            		    android:id="@+id/updateConfButton" 
            		    android:text="@string/updateConfChgString" 
            		    android:layout_height="wrap_content" 
            		    android:layout_width="wrap_content" 
            		    android:layout_weight="2.5" 
            		    android:onClick="updateConfClicked">
            		</Button>
        		</TableRow>
			</TableLayout>   
		</LinearLayout>
    </ScrollView>
</LinearLayout>
